tests/testfiles/passing/invalid_identifiers/keyword_as_id_sizeof.c
/* Keyword as identifier: sizeof */
int main() {
    int sizeof;
}